# bitvec

./: .gitignore  README.md  pyproject.toml
src/bitvec/: __init__.py  core.py  errors.py
tests/: test_access.py  test_bitwise.py  test_construction.py  test_edges.py  test_iteration.py
